# TestingKit

./: .gitignore  .pre-commit-config.yaml  ADR.md  AGENTS.md  BOUNDARY.md  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  PLAN.md  PRD.md  README.md  SECURITY.md  SOTA.md  SPEC.md  SSOT.md  STATUS.md  Taskfile.yml  audit_scorecard.json  justfile  llms.txt  worklog.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo-deny.yml  ci.yml  codeql.yml  coverage.yml  dependency-review.yml  fr-coverage.yml  journey-gate.yml  quality-gate.yml  release-attestation.yml  scorecard.yml  security.yml  trufflehog.yml
crates/phenotype-bdd/: Cargo.toml
crates/phenotype-bdd/src/: parser.rs  runner.rs  steps.rs
docs/: index.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md
docs/audit/: BLOCK-C-AUDIT.md  BLOCK-C-CONSOLIDATION-PLAN.md
docs/boundary/: DISPOSITION.md  TestingKit.md
docs/disposition/: wave-b-absorption.md  wave-b-bdd-reloc.md
docs/intent/: TestingKit.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/worklogs/: README.md
python/mcp-qa/: EXTRACTION_SUMMARY.md  README.md  pyproject.toml
python/mcp-qa/src/mcp_qa/: __init__.py
python/mcp-qa/src/mcp_qa/adapters/: __init__.py  adapters_integration.py  adapters_widgets.py
python/mcp-qa/src/mcp_qa/assertions/: __init__.py
python/mcp-qa/src/mcp_qa/auth/: _env.py  _storage.py  credential_manager.py  enhanced_keychain_manager.py  keychain_manager.py  pytest_fixtures.py  token_broker.py
python/mcp-qa/src/mcp_qa/core/: __init__.py  enhanced_adapter.py  health_registry.py  reporters.py  test_runner.py  validators.py
python/mcp-qa/src/mcp_qa/core/base/: __init__.py  _executor.py  test_runner.py
python/mcp-qa/src/mcp_qa/execution/: pytest_plugin.py
python/mcp-qa/src/mcp_qa/fixtures/: __init__.py  auth.py  clients.py  servers.py  tools.py
python/mcp-qa/src/mcp_qa/framework/: __init__.py  decorators.py  discovery.py
python/mcp-qa/src/mcp_qa/health/: health_checks.py
python/mcp-qa/src/mcp_qa/integration/: __init__.py
python/mcp-qa/src/mcp_qa/mocking/: __init__.py
python/mcp-qa/src/mcp_qa/monitoring/: file_watcher.py
python/mcp-qa/src/mcp_qa/oauth/: __init__.py  broker_cache.py  broker_core.py  credential_broker.py  flow_adapters.py  flow_adapters_core.py  flow_adapters_enhanced.py  flow_adapters_handlers.py  oauth_cache.py  oauth_decorators.py  oauth_progress.py  oauth_progress_enhanced.py  playwright_adapter.py  session_oauth_broker.py
python/mcp-qa/src/mcp_qa/performance/: __init__.py
python/mcp-qa/src/mcp_qa/process/: monitor.py
python/mcp-qa/src/mcp_qa/pytest_plugins/: __init__.py  auth_plugin.py
python/mcp-qa/src/mcp_qa/reporters/: __init__.py  test_basic.py
python/mcp-qa/src/mcp_qa/testing/: auth_validator.py  cache.py  conftest_base.py  live_runner.py  pytest_native.py  runner.py  session_manager.py  test_cache.py  test_runner.py  unified_runner.py
python/mcp-qa/src/mcp_qa/tui/: compat.py  test_compat.py  widgets.py  widgets_compat.py
python/mcp-qa/src/mcp_qa/tui/factories/: dashboard_factory.py
python/mcp-qa/src/mcp_qa/ui/: rich_tui.py
python/mcp-qa/src/mcp_qa/utils/: auth_utils.py  config_utils.py  database_utils.py  logging_utils.py  metrics_utils.py
python/mcp-qa/tests/: test_qa_defaults.py
python/mcp-qa/tests/assertions/: test_tools.py
python/mcp-qa/tests/fixtures/: test_tools.py
python/mcp-qa/tests/health/: test_health.py
python/mcp-qa/tests/logging/: test_logging.py
python/mcp-qa/tests/mocking/: test_server.py  test_tools.py
python/mcp-qa/tests/reporters/: test_error_detail.py  test_json_reporter.py  test_matrix.py
python/pheno-analysis-cli/: README.md  pyproject.toml
python/pheno-analysis-cli/src/pheno_analysis_cli/: __init__.py  cli.py
python/pheno-quality-cli/: README.md  pyproject.toml
python/pheno-quality-cli/src/pheno_quality/: __init__.py  config.py  exporters.py  manager.py  plugins.py  registry.py  utils.py
python/pheno-quality-cli/src/pheno_quality/cli/: __init__.py  main.py
python/pheno-quality-cli/src/pheno_quality/tools/: pattern_detector.py
python/pheno-quality-cli/tests/: README.md  test_quality.py
python/pheno-quality-tools/: EXTRACTION_SUMMARY.md  README.md  pyproject.toml
python/pheno-quality-tools/src/pheno_quality_tools/: __init__.py  architectural_validator.py  atlas_health.py  cli.py  code_smell_detector.py  export_import.py  importers.py  integration.py  integration_gates.py  manager.py  pattern_detector.py  performance_detector.py  security_scanner.py
python/pheno-testing-cli/: README.md  pyproject.toml
python/pheno-testing-cli/src/pheno_testing_cli/: __init__.py  __main__.py  cli.py  property_testing.py
python/pheno-testing-cli/tests/: test_property_testing.py
python/qa-kit/: README.md  pyproject.toml  qa_kit_logging.py
python/qa-kit/scripts/: dashboard_e2e.py  ingest_axe.py  ingest_lhci.py  merge_db.py  seed_from_dir.py
rust/: Cargo.toml
rust/phenotype-bdd/src/: lib.rs
rust/phenotype-compliance-scanner/: Cargo.toml
rust/phenotype-compliance-scanner/src/: async_scan.rs  health_integration.rs  lib.rs
rust/phenotype-contract/: Cargo.toml
rust/phenotype-mock/: Cargo.toml
rust/phenotype-mock/src/: lib.rs
rust/phenotype-test-fixtures/: Cargo.toml  README.md
rust/phenotype-test-fixtures/src/: lib.rs
rust/phenotype-test-infra/: Cargo.toml
rust/phenotype-test-infra/src/: lib.rs
rust/phenotype-testing/: Cargo.toml
rust/phenotype-testing/src/: lib.rs
rust/phenotype-testing/tests/: integration_async.rs
scripts/: audit.sh
src/: lib.rs
tests/: test_smoke.py
