[workspace]
resolver = "2"
members = [
    "phenotype-testing",
    "phenotype-mock",
    "phenotype-test-fixtures",
    "phenotype-test-infra",
    "phenotype-compliance-scanner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Phenotype Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KooshaPari/TestingKit"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
mockall = "0.12"
