[package]
name = "phenotype-bdd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gherkin-style BDD testing framework for the Phenotype ecosystem"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
