[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheno-quality-cli"
version = "1.0.0"
description = "Comprehensive code quality analysis CLI tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Phenotype Team"},
]
keywords = ["quality", "analysis", "code-quality", "cli", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.9.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pheno-quality-check = "pheno_quality.cli.main:main_check"
pheno-quality-report = "pheno_quality.cli.main:main_report"
pheno-quality-export = "pheno_quality.cli.main:main_export"
pheno-quality-import = "pheno_quality.cli.main:main_import"

[project.urls]
Homepage = "https://github.com/phenotype/pheno-quality-cli"
Repository = "https://github.com/phenotype/pheno-quality-cli"
Documentation = "https://github.com/phenotype/pheno-quality-cli#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pheno_quality"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
