[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheno-quality-tools"
version = "1.0.0"
description = "Comprehensive quality analysis framework for Python projects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Phenotype Ecosystem"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
pheno-quality-gates = "pheno_quality_tools.cli:main"

[project.urls]
Homepage = "https://github.com/KooshaPari/Phenotype"
Documentation = "https://github.com/KooshaPari/Phenotype/tree/main/TestingKit/python/pheno-quality-tools"
Repository = "https://github.com/KooshaPari/Phenotype"

[tool.hatch.build.targets.wheel]
packages = ["src/pheno_quality_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
