[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pheno-testing-cli"
version = "1.0.0"
description = "Comprehensive testing toolkit for Python projects - extracted from PhenoSDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Phenotype Team" },
]
keywords = [
    "testing",
    "security",
    "performance",
    "parallel",
    "cli",
    "qa",
    "property-based",
    "hypothesis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.100.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "faker>=19.0.0",
]
property = [
    "hypothesis>=6.100.0",
]

[project.scripts]
pheno-test = "pheno_testing_cli.cli:main"

[project.urls]
Homepage = "https://github.com/KooshaPari/Phenotype"
Repository = "https://github.com/KooshaPari/Phenotype"

[tool.hatch.build.targets.wheel]
packages = ["src/pheno_testing_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
