[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qa-kit"
version = "0.1.0"
description = "Comprehensive QA testing and reporting framework for standalone use"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
    { name = "PHENO-SDK Team" },
    { name = "TestingKit Maintainers" }
]
keywords = ["qa", "testing", "dashboard", "junit", "pytest", "lighthouse", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
# Core QA Dependencies
core = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.4.0",
    "factory-boy>=3.3.0",
    "faker>=19.12.0",
]

# E2E Testing
e2e = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "pytest-playwright>=0.4.0",
]

# Performance Testing
performance = [
    "locust>=2.17.0",
    "pytest-benchmark>=4.0.0",
    "memory-profiler>=0.61.0",
    "psutil>=5.9.0",
]

# API Testing
api = [
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

# Database Testing
database = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]

# Reporting
reporting = [
    "pytest-html>=4.1.1",
    "pytest-json-report>=1.5.0",
    "allure-pytest>=2.13.0",
    "pytest-clarity>=1.0.1",
]

# All extras
all = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.6.1",
    "coverage>=7.4.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.28.1",
]

[project.scripts]
qa-ingest = "scripts.ingest:main"
qa-ingest-axe = "scripts.ingest_axe:main"
qa-ingest-lhci = "scripts.ingest_lhci:main"
qa-merge-db = "scripts.merge_db:main"
qa-seed-from-dir = "scripts.seed_from_dir:main"
qa-dashboard-e2e = "scripts.dashboard_e2e:main"

[tool.setuptools]
py-modules = ["qa_kit_logging"]

[tool.setuptools.package-data]
scripts = ["*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
