[package]
name = "phenotype-test-fixtures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tempfile = "3.8"
rand = "0.8"

phenotype-contracts = { path = "../phenotype-contracts" }
phenotype-port-traits = { path = "../phenotype-port-traits" }

[dev-dependencies]
tokio-test = "0.4"
