[package]
name = "phenotype-test-infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
phenotype-test-fixtures = { path = "../phenotype-test-fixtures" }
phenotype-mock = { path = "../phenotype-mock" }
phenotype-in-memory-store = { path = "../phenotype-in-memory-store" }
tokio = { workspace = true, features = ["rt", "macros", "time", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.14"
port-selector = "0.1"

[dev-dependencies]
