[package]
name = "phenotype-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "rt"] }
tokio-test = "0.4"
futures-util = "0.3"
once_cell = "1.19"
rand = "0.8"
mockall = { version = "0.13", optional = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "test-util", "sync"] }

[features]
default = []
mock = ["mockall"]
